Mejora codigo comandosPython

--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/LimpiezaDatos/EliminarColumnasInnecesarias.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/LimpiezaDatos/EliminarColumnasInnecesarias.html
@@ -10,8 +10,10 @@
     <p class="lead">
         Por outliers nos referimos a cualquier dato que difiere signicativamente del promedio o rango observado del resto de nuestros datos.
     </p>
-    <p><a href="https://www.malicksarr.com/how-to-detect-and-handle-outliers-in-data-mining/?utm_content=cmp-true" 
-          class="btn btn-primary btn-large">Aprender más&raquo;</a></p>
+    <p>
+        <a href="https://www.malicksarr.com/how-to-detect-and-handle-outliers-in-data-mining/?utm_content=cmp-true"
+           class="btn btn-primary btn-large">Aprender más&raquo;</a>
+    </p>
 </div>
 
 <div class="row">
@@ -24,22 +26,14 @@
         </p>
     </div>
     <div class="col-md-4">
-        <h1>Cuartil</h1>
-        <p>El cuartil es cada uno de los 3 valores que pueden dividir un grupo de números, ordenados de menor a mayor, en 4 partes iguales.</p>
+        <h1>Columnas Innecesarias</h1>
+        <p></p>
         <p>
             <a href="https://www.probabilidadyestadistica.net/cuartiles/"
                class="btn btn-primary btn-large">Aprender más&raquo;</a>
         </p>
     </div>
     
-    <div class="col-md-4">
-        <h1>Método IQR</h1>
-        <p>El rango intercuartílico (IQR) es una medida de variabilidad basada en la división de un conjunto de datos en cuartiles.</p>
-        <p>
-            <a href="https://docs.oracle.com/cloud/help/es/pbcs_common/PFUSU/insights_metrics_IQR.htm#PFUSU-GUID-CF37CAEA-730B-4346-801E-64612719FF6B"
-               class="btn btn-primary btn-large">Aprender más&raquo;</a>
-        </p>
-    </div>
 </div>
 
 {% endblock %}
