--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/LimpiezaDatos/LimpiezaDatos.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/LimpiezaDatos/LimpiezaDatos.html
@@ -16,8 +16,9 @@
     <div class="col-md">
         <h1>Razones para efectuar la limpieza de datos</h1>
         <ul>
-            <li><a href="{% url 'Outliers' %}">Outliers</a></li>
+            <li><a href="{% url 'EliminarColumnasInnecesarias' %}">Eliminar columnas innecesarias</a></li>
             <li><a href="{% url 'DatosNulos' %}">Datos Nulos</a></li>
+            <li><a href="{% url 'Outliers' %}">Outliers</a></li>
             <li><a href="{% url 'DatosErroneosIrrelevantes' %}">Datos Erroneos e Irrelevantes</a></li>
         </ul>
     </div>
@@ -25,10 +26,13 @@
         <h2>Tutoriales</h2>
         <ul>
             <li>
-                <a href="">Outliers</a>
+                <a href="">Eliminacion columnas innecesarias</a>
             </li>
             <li>
                 <a href="">Datos nulos</a>
+            </li>
+            <li>
+                <a href="">Outliers</a>
             </li>
             <li>
                 <a href="">Datos Erroneos e Irrelevantes</a>
