Video EliminacionDatosInnecesarios+DatosNulos

--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/LimpiezaDatos/DatosNulos.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/LimpiezaDatos/DatosNulos.html
@@ -18,5 +18,19 @@
     </p>
 </div>
 
+<div class="row">
+    <div class="col-md-4">
+        <h1>Heatmap</h1>
+        <p>
+            Un mapa de calor es una representación gráfica de datos donde los valores se representan por colores. Estos gráficos facilitan la visualización de datos
+            completos y su comprensión de un vistazo.
+        </p>
+        <p>
+            <a href="https://www.esic.edu/rethink/tecnologia/los-mapas-calor-heatmaps-sirven"
+               class="btn btn-primary btn-large">Aprender más&raquo;</a>
+        </p>
+    </div>
+</div>
+
 
 {% endblock %}
