--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/comandosPython.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/comandosPython.html
@@ -107,18 +107,36 @@
             def drop_cols(df,cols):
                 df.drop(cols, axis=1, inplace=True)
                 return df
+
+            # Visualizamos los datos nulos
+
+            def visualizarDatosNulos(df):
+                # Porcentaje de valores nulos
+                display("Porcentaje de valores nulos: ")
+                missing_values = df.isnull().sum()
+                display(missing_values[missing_values > 0]/len(df)*100)
+                # Grafica de valores nulos
+                sns.heatmap(df.isnull(), yticklabels=False, cbar=False)
+                plt.title("Datos nulos")
+                display(plt)
+                plt.clf()
+                return df
             
+            # Funcion que rellena los valores nulos usando la moda
+
+            def rellenarValoresNulos(df, string):
+                df[string] = df[string].fillna(df[string].mode()[0])
+                return df
             
             # Funcion principal
             def main():
 
-                # Procesamiento del dataset iris
-                iris.pipe(showDataset)
-                
                 # Procesamiento del dataset titanic
-                titanic.pipe(showDataset)
-                titanic2 = titanic.pipe(cargarTitanic).pipe(drop_cols, ['PassengerId','Name','Ticket','Cabin']).pipe(showDataset)
-
+                titanic2 = titanic.pipe(cargarTitanic).pipe(
+                                                                drop_cols, 
+                                                                ['PassengerId','Name','Ticket','Cabin','Embarked']).pipe(visualizarDatosNulos).pipe(
+                                                                rellenarValoresNulos, 'Age')
+                titanic2.pipe(visualizarDatosNulos)
             if __name__ == "__main__":
                 iris,titanic,segment_challenge = cargarDatasets()
                 main()
