--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/MineriaDatos.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/MineriaDatos.html
@@ -22,17 +22,23 @@
             <li><a href="{% url 'ObtencionDatos' %}">ObtencionDatos</a></li>
             <li><a href="{% url 'LimpiezaDatos' %}">LimpiezaDatos</a></li>
             <li><a href="{% url 'Algoritmos' %}">Algoritmos</a></li>
-            <li><a href="{% url 'TransformacionDatos' %}">TransformacionDatos</a></li>
             <li><a href="{% url 'EvaluacionResultados' %}">EvaluacionResultados</a></li>
+	    <li><a href="{% url 'TransformacionDatos' %}">TransformacionDatos</a></li>
         </ul>
     </div>
     <div class="col-md-4">
         <h1>Información de interés</h1>
         <ul><li><a href="{% url 'comandosPython' %}">comandosPython</a></li></ul>
         <ul><li><a href="{% url 'Datasets' %}">Datasets</a></li></ul>
-        <ul><li><a href="">EjerciciosPropuestos</a></li></ul></li></ul>
     </div>
     
+    <div class="col-md-4">
+        <h1>Ejercicios Propuestos</h1>
+        <ul>
+            <li><a href="">Video de Instrucciones</a></li>
+            <li><a href="">Script</a></li>
+        </ul>
+    </div>
 
 </div>
 
