--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/LimpiezaDatos/LimpiezaDatos.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/LimpiezaDatos/LimpiezaDatos.html
@@ -16,26 +16,25 @@
     <div class="col-md">
         <h1>Razones para efectuar la limpieza de datos</h1>
         <ul>
-            <li><a href="{% url 'EliminarColumnasInnecesarias' %}">Eliminar columnas innecesarias</a></li>
-            <li><a href="{% url 'DatosNulos' %}">Datos Nulos</a></li>
+            <li><a href="{% url 'SeleccionDatosInteres' %}">Seleccion datos de interes</a></li>
+            <li><a href="{% url 'DatosNulos' %}">Gestion Elementos Vacios</a></li>
             <li><a href="{% url 'Outliers' %}">Outliers</a></li>
-            <li><a href="{% url 'DatosErroneosIrrelevantes' %}">Datos Erroneos e Irrelevantes</a></li>
         </ul>
     </div>
     <div class="col-md-4">
         <h2>Tutoriales</h2>
         <ul>
             <li>
-                <a href="">Eliminacion columnas innecesarias</a>
+                <a href="">Seleccion Datos de Interes</a>
             </li>
             <li>
-                <a href="">Datos nulos</a>
+                <a href="">Gestion Elementos Vacios</a>
             </li>
             <li>
                 <a href="">Outliers</a>
             </li>
             <li>
-                <a href="">Datos Erroneos e Irrelevantes</a>
+                <a href="">Creacion de nuevas variables</a>
             </li>
         </ul>
     </div>
