Limpiado datos nulos o vacios

--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/LimpiezaDatos/LimpiezaDatos.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/LimpiezaDatos/LimpiezaDatos.html
@@ -16,8 +16,8 @@
     <div class="col-md">
         <h1>Razones para efectuar la limpieza de datos</h1>
         <ul>
+            <li><a href="{% url 'DatosNulos' %}">Datos nulos o perdidos</a></li>
             <li><a href="{% url 'SeleccionDatosInteres' %}">Seleccion datos de interes</a></li>
-            <li><a href="{% url 'DatosNulos' %}">Gestion Elementos Vacios</a></li>
             <li><a href="{% url 'Outliers' %}">Outliers</a></li>
         </ul>
     </div>
@@ -25,11 +25,12 @@
         <h2>Tutoriales</h2>
         <ul>
             <li>
-                <a href="">Seleccion Datos de Interes</a>
+                <a href="">Datos nulos o perdidos</a>
             </li>
             <li>
-                <a href="">Gestion Elementos Vacios</a>
+                <a href="">Seleccion Datos de Interes</a>
             </li>
+            
             <li>
                 <a href="">Outliers</a>
             </li>
