--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/MineriaDatos.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/MineriaDatos.html
@@ -20,10 +20,9 @@
         <h1>Etapas del proceso de minería de datos</h1>
         <ul>
             <li><a href="{% url 'ObtencionDatos' %}">ObtencionDatos</a></li>
-            <li><a href="{% url 'LimpiezaDatos' %}">LimpiezaDatos</a></li>
+            <li><a href="{% url 'PreprocesamientoDatos' %}">PreprocesamientoDatos</a></li>
             <li><a href="{% url 'Algoritmos' %}">Algoritmos</a></li>
             <li><a href="{% url 'EvaluacionResultados' %}">EvaluacionResultados</a></li>
-	    <li><a href="{% url 'TransformacionDatos' %}">TransformacionDatos</a></li>
         </ul>
     </div>
     <div class="col-md-4">
