--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/PreprocesamientoDatos/PreprocesamientoDatos.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/PreprocesamientoDatos/PreprocesamientoDatos.html
@@ -14,7 +14,7 @@
 
 <div class="row">
     <div class="col-md">
-        <h1>Razones para efectuar la limpieza de datos</h1>
+        <h1>Informacion de Interes</h1>
         <ul>
             <li><a href="{% url 'DatosNulos' %}">Datos nulos o perdidos</a></li>
             <li><a href="{% url 'SeleccionDatosInteres' %}">Seleccion datos de interes</a></li>
@@ -25,18 +25,9 @@
         <h2>Tutoriales</h2>
         <ul>
             <li>
-                <a href="">Datos nulos o perdidos</a>
-            </li>
-            <li>
-                <a href="">Seleccion Datos de Interes</a>
+                <a href="">LimpiezaDatos + TransformacionDatos</a>
             </li>
             
-            <li>
-                <a href="">Outliers</a>
-            </li>
-            <li>
-                <a href="">Creacion de nuevas variables</a>
-            </li>
         </ul>
     </div>
 </div>
