--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/comandosPython.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos/comandosPython.html
@@ -135,13 +135,52 @@
                 visualizarDatosPerdidos(df)
                 return df
 
+            # Funcion que detecta valores atipicos de un dataset
+
+            def detectarOutliers(df):
+                df.plot(kind="box", figsize=(8,8)); display(plt); plt.clf()
+                return df
+
+            # Funcion que transforma los datos del dataset titanic
+
+            def transformacionDatosTitanic(df):
+                
+                variablesFicticias=[]
             
+                # Generamos las variables ficticias para PClass, Sex y Embarked
+                cols = ['Pclass', 'Sex', 'Embarked']
+                for col in cols:
+                    variablesFicticias.append(pd.get_dummies(df[col]))
+                
+                df = pd.concat((df, pd.concat(variablesFicticias, axis=1)), axis=1)
+
+                # Generamos la variable para identificar si el pasajero viajaba en familia o no
+                df['enFamilia'] = (df['SibSp'] > 0) | (df['Parch'] > 0)
+                
+                # Generamos la variable para identificar si el pasajero es adulto o niño
+                df['rangoEdad'] = pd.cut(df['Age'], [-1,15,80], labels=['niño','adulto'])
+                
+                # Transformamos la tarifa en rangos de intervalos 
+                
+                
+                df.loc[ df['Fare'] <= 7.910400, 'Fare' ] = 0
+                df.loc[ (df['Fare'] > 7.910400)   & (df['Fare'] <= 14.454200), 'Fare'] = 1
+                df.loc[ (df['Fare'] > 14.454200)   & (df['Fare'] <= 31), 'Fare'] = 2
+                df.loc[ df['Fare'] > 31, 'Fare' ] = 3
+                df['Fare'] = df['Fare'].astype(int)
+
+                # Eliminamos las columnas de informacion redundante
+                df = df.drop(['Pclass', 'Sex', 'Embarked', 'SibSp', 'Parch', 'Age'], axis=1)
+                return df
             
             
             # Funcion principal
             def main():
-                titanic2 = titanic.copy().pipe(visualizarDatosPerdidos).pipe(visualizarDatosPerdidosTitanic).pipe(eliminarColumnas, ['PassengerId', 'Name', 'Ticket', 'Cabin']).pipe(LimpiarDatosFaltantesTitanic)
 
+                # Preprocesamiento dataset titanic
+                titanic2 = titanic.copy().pipe(visualizarDatosPerdidos).pipe(visualizarDatosPerdidosTitanic).pipe(eliminarColumnas, ['PassengerId', 'Name', 'Ticket', 'Cabin', 'Deck']).pipe(LimpiarDatosFaltantesTitanic).pipe(detectarOutliers).pipe(transformacionDatosTitanic).pipe(detectarOutliers)
+                
+                display(titanic2)
             if __name__ == "__main__":
                 # Cargamos los conjuntos de datos
                 iris, titanic, segment_challenge = cargarIris(), cargarTitanic(), cargarSegmentChallenge()
